# src/controllers/appointments.controller.js
@@ -1,12 +1,9 @@
-const appointmentsService = require("../services/appointments.service");
-const { sendSuccess, sendCreated } = require("../middlewares/response");
+const appointmentsService = require('../services/appointments.service');
+const { sendSuccess, sendCreated } = require('../middlewares/response');
 
 const getAllByClinic = async (req, res, next) => {
   try {
-    const appointments = await appointmentsService.getAllByClinic(
-      req.params.clinicId,
-      req.query,
-    );
+    const appointments = await appointmentsService.getAllByClinic(req.params.clinicId, req.query);
     sendSuccess(res, appointments);
   } catch (err) {
     next(err);
@@ -15,10 +12,7 @@ const getAllByClinic = async (req, res, next) => {
 
 const getById = async (req, res, next) => {
   try {
-    const appointment = await appointmentsService.getById(
-      req.params.id,
-      req.params.clinicId,
-    );
+    const appointment = await appointmentsService.getById(req.params.id, req.params.clinicId);
     sendSuccess(res, appointment);
   } catch (err) {
     next(err);
@@ -27,10 +21,7 @@ const getById = async (req, res, next) => {
 
 const create = async (req, res, next) => {
   try {
-    const appointment = await appointmentsService.create(
-      req.params.clinicId,
-      req.body,
-    );
+    const appointment = await appointmentsService.create(req.params.clinicId, req.body);
     sendCreated(res, appointment);
   } catch (err) {
     next(err);
@@ -42,7 +33,7 @@ const updateStatus = async (req, res, next) => {
     const appointment = await appointmentsService.updateStatus(
       req.params.id,
       req.params.clinicId,
-      req.body,
+      req.body
     );
     sendSuccess(res, appointment);
   } catch (err) {
